projects/lungmen.akn/dist/apps/jellyfin/gateway.networking.k8s.io.v1.HTTPRoute.jellyfin-websecure.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    link.argocd.argoproj.io/external-link: https://streaming.chezmoi.sh
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin-websecure
  namespace: jellyfin
spec:
  hostnames:
  - streaming.chezmoi.sh
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: external
    namespace: kube-system
    sectionName: chezmoi.sh-websecure
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: internal
    namespace: kube-system
    sectionName: chezmoi.sh-websecure
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: jellyfin
      port: 80
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
