projects/lungmen.akn/dist/apps/jellyfin/cilium.io.v2.CiliumNetworkPolicy.allow-jellyfin-from-newt.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Newt to route traffic to Jellyfin application.
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: allow-jellyfin-from-newt
  namespace: jellyfin
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: newt
            io.kubernetes.pod.namespace: newt-system
      toPorts:
        - ports:
            - port: "8096"
              protocol: TCP
