projects/lungmen.akn/dist/apps/jellyfin/cilium.io.v2.CiliumNetworkPolicy.allow-jellyfin-to-internet.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    policy.networking.k8s.io/description: |
      Allows Jellyfin to access specific internet resources for core functionality:
      - Jellyfin repositories (repo.jellyfin.org, *.mirror.jellyfin.org) for updates and packages
      - Plugin sources (github.com, raw.githubusercontent.com, www.iamparadox.dev) for plugin downloads
      - Metadata providers (artworks.thetvdb.com, image.tmdb.org) for movie/TV show artwork and information
      All connections are restricted to HTTPS (port 443) only.
  labels:
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: allow-jellyfin-to-internet
  namespace: jellyfin
spec:
  egress:
  - toFQDNs:
    - matchName: repo.jellyfin.org
    - matchPattern: '*.mirror.jellyfin.org'
    - matchName: github.com
    - matchName: raw.githubusercontent.com
    - matchName: www.iamparadox.dev
    - matchName: artworks.thetvdb.com
    - matchName: image.tmdb.org
    toPorts:
    - ports:
      - port: "443"
        protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
